--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -129,6 +129,9 @@ on post-fs-data
 
     # Create directory used by powermodule
     mkdir /data/vendor/pwr 0700 root root
+   
+    # Create IOP deamon related dirs
+    mkdir /data/vendor/iop 0700 root system
 
     # Create directory used by media clients
     mkdir /data/vendor/media 0770 mediacodec media
@@ -251,6 +254,13 @@ service irsc_util /vendor/bin/irsc_util "/vendor/etc/sec_config"
     class core
     user root
     oneshot
+
+service iop /system/vendor/bin/iop
+    class main
+    user root
+    group root
+    disabled
+    socket iop seqpacket 0666 root system
 
 service cnss-daemon /system/vendor/bin/cnss-daemon -n -l
     class late_start
