--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -267,6 +267,10 @@ on boot
     chown system system /sys/class/mi_display/disp-DSI-1/dynamic_fps
     chmod 0444 /sys/class/mi_display/disp-DSI-1/dynamic_fps
 
+    # Set dimlayer exposure permission
+    chown system system /sys/devices/platform/soc/soc:qcom,dsi-display-primary/dimlayer_exposure
+    chmod 0664 /sys/devices/platform/soc/soc:qcom,dsi-display-primary/dimlayer_exposure
+
     #touch funtions permissions setting
     chown system system /sys/class/touch/touch_dev/palm_sensor
     chmod 0664 /sys/class/touch/touch_dev/palm_sensor
@@ -396,3 +400,9 @@ service vendor.audio-hal /vendor/bin/hw/android.hardware.audio.service
     task_profiles ProcessCapacityHigh HighPerformance
     socket audio_hw_socket seqpacket 0666 system system
     onrestart restart audioserver
+
+service init-panel_name-sh /vendor/bin/init.panel_name.sh
+    class main
+    user system
+    group system
+    oneshot
